--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
     "@ionic/angular": "^8.0.0",
+    "chart.js": "^4.4.8",
     "cordova-plugin-x-socialsharing": "^6.0.4",
     "es6-promise-plugin": "^4.2.2",
     "ionicons": "^7.0.0",
